<resources>
    <string name="app_name">Product</string>
    <string name="bolded_text"><b>New Product</b></string>
    <string name="bolded_text2"><b>Product Admin</b></string>
    <string name="bolded_text3"><b>ID</b></string>
    <string name="bolded_text4"><b>Name</b></string>
    <string name="bolded_text5"><b>Price</b></string>
    <string name="bolded_text6"><b>Description</b></string>
    <string name="bolded_text7"><b>Categories</b></string>
    <string name="bolded_text8"><b>Image</b></string>
    <string name="bolded_text9"><b>Add</b></string>
    <string name="bolded_text10"><b>Type ID</b></string>
    <string name="bolded_text11"><b>ID - 1</b></string>
    <string name="bolded_text12"><b>Chicken Pizza</b></string>
    <string name="bolded_text13"><b>It is made using grilled chicken.</b></string>
    <string name="bolded_text14"><b>Rs. 1750.00</b></string>
    <string name="bolded_text15"><b>ID - 2</b></string>
    <string name="bolded_text16"><b>Sausage Pizza</b></string>
    <string name="bolded_text17"><b>It is made using slices of sausage and chicken.</b></string>
    <string name="bolded_text18"><b>Rs. 1550.00</b></string>
    <string name="bolded_text19"><b>ID - 3</b></string>
    <string name="bolded_text20"><b>Burger</b></string>
    <string name="bolded_text21"><b>It is made using lean of chicken,egg.</b></string>
    <string name="bolded_text22"><b>Rs. 250.00</b></string>
    <string name="bolded_text23"><b>Edit Product</b></string>
    <string name="bolded_text24"><b>Choose Other</b></string>
    <string name="bolded_text25"><b>Update</b></string>
    <string name="bolded_text26"><b>New Category</b></string>
    <string name="bolded_text27"><b>Most Popular</b></string>
    <string name="bolded_text28"><b>Vegitable Pizza</b></string>
    <string name="bolded_text29"><b>It is made with vairous vegitables and gives with cheese</b></string>
    <string name="bolded_text30"><b>Rs. 1250.00</b></string>
    <string name="bolded_text31"><b>Mashroom Pizza</b></string>
    <string name="bolded_text32"><b>It is made with fried mashrooms with cheese.</b></string>
    <string name="bolded_text33"><b>Rs. 1350.00</b></string>
    <string name="invalid_productID">Please Enter Valid ID</string>


    <string-array name="names">
        <item>Select(category)</item>
        <item>Pizza</item>
        <item>Burger</item>
        <item>Kottu</item>
    </string-array>
</resources>